4B/cs444/tests/site/pass/pass_nullliteral.joos
/* pass: null literal */
public class A {
  public A() {}
  protected A x = null;
}

