4B/cs444/tests/site/fail/fail_implicitintegerconstantcasts.joos
/* fail: implicit integer constant casts */
class A {
  public byte x = /* (byte) */5;
}


